--- a/mockup-ecommerce/templates/product_detail.html
+++ b/mockup-ecommerce/templates/product_detail.html
@@ -11,7 +11,7 @@
 
     <header>
         <div class="logo">
-            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Your Flower Shop Logo">
+            <img src="{{ url_for('static', filename='imgs/logoshop.png') }}" alt="Your Flower Shop Logo">
             <h1>BloomSage Flower Shop</h1>
         </div>
     </header>
