--- a/mockup-ecommerce/templates/index.html
+++ b/mockup-ecommerce/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='Logo_BloomSage.png') }}">
     <title>BloomSage Flower Shop</title>
 </head>
@@ -13,6 +13,9 @@
         <div class="logo">
             <img src="{{ url_for('static', filename='imgs/logoshop.png') }}" alt="Logo">
             <h1>BloomSage Flower Shop</h1>
+            <a target="_blank" href="http://172.26.57.9:8081/">
+                ← Go back to BloomSage Application
+            </a>
         </div>
     </header>
 
@@ -32,7 +35,7 @@
     </section>
 
     <footer>
-        <p>&copy; BloomSage Flower Shop</p>
+        <p>&copy; BloomSage Flower Shop 2024</p>
     </footer>
 
 </body>
