--- a/mockup-ecommerce/static/style.css
+++ b/mockup-ecommerce/static/style.css
@@ -76,14 +76,19 @@ h3 {
     font-weight: bold;
 }
 
-a {
-    display: block;
+a,
+button {
     margin-top: 10px;
     background-color: #ffcccb;
     color: #333;
     padding: 10px;
     text-decoration: none;
     border-radius: 5px;
+    cursor: pointer;
+}
+
+a {
+    display: block;
 }
 
 footer {
