--- a/mockup-ecommerce/templates/product_detail.html
+++ b/mockup-ecommerce/templates/product_detail.html
@@ -11,7 +11,7 @@
 
     <header>
         <div class="logo">
-            <img src="{{ url_for('static', filename='imgs/logoshop.png') }}" alt="Your Flower Shop Logo">
+            <img src="{{ url_for('static', filename='imgs/logoshop.png') }}" alt="Flower Shop Logo">
             <h1>BloomSage Flower Shop</h1>
             <a href="http://172.26.57.9:8081/">
                 ← Go back to BloomSage Application
@@ -26,13 +26,18 @@
             <h2>{{ product.name }}</h2>
             <p>{{ product.description }}</p>
             <p class="price">${{ product.price }}</p>
-            <a href="#">Add to Cart</a>
+            <button onclick="addToCart()">Add to Cart</button>
         </div>
     </section>
 
     <footer>
         <p>&copy; BloomSage Flower Shop 2024</p>
     </footer>
-
+    
+    <script>
+        function addToCart() {
+            alert("You have added to cart!");
+        }
+    </script>
 </body>
 </html>
